# Ursinaxball

./: example.py  example_multi.py  play_obstacle.py  pyproject.toml
tests/: test_chase_bot.py
ursinaxball/: game.py
ursinaxball/modules/bots/: advanced_bots.py  common_bots.py
ursinaxball/modules/systems/: game_recorder.py  game_renderer.py
ursinaxball/objects/base/: physics_object.py
