[tool.poetry]
name = "ursinaxball"
version = "0.3.0"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.2.0"
msgpack = "^1.1.0"
panda3d = "^1.10.15"
ursina = "^8.3.0"
scipy = "^1.15.0"
screeninfo = "^0.8.1"
loguru = "^0.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
tox = "^4.23.0"
pyperf = "^2.8.0"
pyinstrument = "^5.0.0"
plotly = "^5.24.0"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
