[tool.poetry]
name = "ursinaxball"
version = "0.3.0"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
numpy = "^2.4.2"
msgpack = "^1.1.2"
ursina = "^8.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
tox = "^4.39.0"
pyperf = "^2.10.0"
pyinstrument = "^5.1.2"
plotly = "^6.5.2"
ruff = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
